Write pending queue during online indexing (#4293)
During online indexing, under certain circumstances, short indexer
transactions will repeatedly cause conflicts with user transactions
(while the user attempts to update the index). To avoid this, we should
add a new index state: WRITE_ONLY_WITH_QUEUE. In this index state, user
updates will be added to a write-pending queue, and the indexer will
drain the queue.