@@ -48,10 +48,11 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.LongStream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -82,11 +83,7 @@ public abstract class OnlineIndexerTest {
 
     @Nonnull
     public IndexMaintenanceFilter getIndexMaintenanceFilter() {
-        if (indexMaintenanceFilter == null) {
-            return IndexMaintenanceFilter.NORMAL;
-        } else {
-            return indexMaintenanceFilter;
-        }
+        return Objects.requireNonNullElse(indexMaintenanceFilter, IndexMaintenanceFilter.NORMAL);
     }
 
     @BeforeEach
@@ -135,7 +132,7 @@ public abstract class OnlineIndexerTest {
     }
 
     @Nonnull
-    private FDBRecordStore.Builder createStoreBuilder() {
+    FDBRecordStore.Builder createStoreBuilder() {
         return FDBRecordStore.newBuilder()
                 .setMetaDataProvider(metaData)
                 .setFormatVersion(formatVersion)
@@ -229,7 +226,7 @@ public abstract class OnlineIndexerTest {
                         .setNumValue3Indexed((int) val * 77)
                         .setNumValueUnique((int)val * 1139)
                         .build()
-        ).collect(Collectors.toList());
+        ).toList();
 
         try (FDBRecordContext context = openContext())  {
             records.forEach(recordStore::saveRecord);
@@ -381,6 +378,17 @@ public abstract class OnlineIndexerTest {
             pauseSemaphore.release();
         } else {
             passed.set(true);
+        }
+        return oldConfig;
+    }
+
+    protected static OnlineIndexOperationConfig pauseAfterNthPass(final OnlineIndexOperationConfig oldConfig, final int passesCount, final AtomicInteger passCounter, final Semaphore inPauseSemaphore, final Semaphore pauseSemaphore) {
+        if (passCounter.get() >= passesCount) {
+            inPauseSemaphore.release();
+            Assertions.assertDoesNotThrow(() -> pauseSemaphore.acquire());
+            pauseSemaphore.release();
+        } else {
+            passCounter.incrementAndGet();
         }
         return oldConfig;
     }
